src/Domain/Compiler/Tests/Expression/IntegerLiteral/HexadecimalLiteral/__Baselines__/HexadecimalLiteral_SInt64Overflow-StashIr.error
error: Integer literal subceeds global minimum limit (s64_min).
--> main.hs:7:17
  | 
7 |         return -0xffff_ffff_ffff_ffff;
  |                 ^^^^^^^^^^^^^^^^^^^^^
